syntax = "proto3";

package core;

option go_package = "github.com/joshmeranda/marina/gateway/api/core";

message NamespacedName {
    string name = 1;
    string namespace = 2;
}

enum StringMatchOp {
    Equal = 0;
    NotEqual = 1;

    RegexMatch = 2;
    RegexNotMatch = 3;
}

enum CollectionMatchOp {
    // ContainsAllOf matches collections which contain all of the values specified in the query.
    ContainsAllOf = 0;

    // ContainsAllOf matches collections which contain any of the values specified in the query.
    ContainsAnyOf = 1;
}

message StringQuery {
    string value = 1;
    StringMatchOp match_op = 2;
}

message CollectionQuery {
    repeated string values = 1;
    CollectionMatchOp match_op = 2;
}